--- a/src/lib/style/main.css
+++ b/src/lib/style/main.css
@@ -6,3 +6,10 @@
 html {
     font-family: "Helvetica Neue", sans-serif;
 }
+
+@supports(padding:max(0px)) {
+    body, header, footer {
+        padding-left: min(0vmin, env(safe-area-inset-left));
+        padding-right: min(0vmin, env(safe-area-inset-right));
+    }
+}
