--- a/src/lib/style/main.css
+++ b/src/lib/style/main.css
@@ -1,13 +1,26 @@
 * {
     margin: 0;
     padding: 0;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    touch-action: manipulation;
 }
 
 html {
     font-family: "Helvetica Neue", sans-serif;
 }
 
-@supports(padding:max(0px)) {
+body {
+    position: fixed;
+    inset: 0;
+}
+
+@supports (padding:max(0px)) {
     body, header, footer {
         padding-left: min(0vmin, env(safe-area-inset-left));
         padding-right: min(0vmin, env(safe-area-inset-right));
